@@ -3,7 +3,7 @@ Contributors: moneyspace
 Tags: credit card, moneyspace, payment request, thaibank, woocommerce, automattic, bay, ktc, fcy, installment
 Requires at least: 4.9
 Tested up to: 6.0
-Stable tag: 2.7.4
+Stable tag: 2.7.5
 Requires PHP: 7.0
 Requires WordPress: 4.9
 License: GPLv3
@@ -63,6 +63,7 @@ Yes! In Live Mode, an SSL certificate must be installed on your site to use Mone
 == Changelog ==
 = 1.0.0 - 2021-05-12 =
 
+* 2022-07-08 : fix bug callback not invalid parameter
 * 2022-06-30 : fix bug checking qrnone status from api and set default enable stock reduce and force wc-completed after pay.
 * 2022-06-28 : fix bug checking qrnone status from api
 * 2022-05-30 : fix bug qrnone not rendering
